Fix navigate to '/' from about subpage, fix button styles in about section on small screens

--- a/src/components/pages/About/About.module.scss
+++ b/src/components/pages/About/About.module.scss
@@ -26,7 +26,7 @@
     }
 
     .aboutTxt {
-        height: 100vh;
+        min-height: 100vh;
         background-color: $color-light;
         display: flex;
         flex-direction: column;
